2008-11-30:
    Changes to the Reflectivty plugin. It now tries to load an existing model
    when the plugin is loaded.
    The loaded plugins is also saved as the model is saved and are tried to
    be loded when the model loaded again. Also it is possible to define 
    default plugins in genx.conf.
    Found a bug in reflectivity plugin:
    The parameter section got many: "p = UserVars()" upon saving. Fixed

2008-11-28:
    Fixed the Key error given when shutting GenX down. Due to that the pool
    of workers where living in a thread. When removed from that thread the
    error disappeared.
    Added alot of error checking for loading and saving files. Should be almost
    idiot proof now.

2008-11-27:
    Added Ibkg to the interdiff model (not implemented previously)
    Added revival of the FOM vs generations plot after loading of data.
    Fixed bugs in the insertion of the layers.

2008-11-26:
    Added documentation to the plugins.
    Added documentation to the data loaders.
    Fixed export scritp+export table bug. When asked to overwrite the file
    the program asks about the gx file.
    Implemented autosaving every X generation. If wanted by the user, default
     off.
    Also added also atosave, errobar level, parallel processeing alternatives
    to the optimizer settings dialog box.
    
2008-11-23:
    Added procssing as an package in the about box. 
    Added code so that the fit state also is saved to the model. 

2008-11-22: 
    Solved the problem with the convolute fast. All three methods
    give very similair results. However it is dependent on step size
    integration range etc.
    Added the possiblity to work with g/cm^3 as the density. Implemented
    a new scattering database for x-rays and neutrons fw, bw that makes
    this possible. Not tested yet.
    Added help frames for data loaders and plugins as well. The documentation
    still to be written.

2008-11-21:
    Fixed bug in exporting data sets to a dat file. Now it is a 